# android-launcher

./: .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/workflows/: build.yml  buld.yml  update-site.yml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/web_interface/: index.html
app/src/main/cpp/: CMakeLists.txt  base.h  launcher-fix.cpp  log.hpp  patcher.cpp
app/src/main/java/com/customRobTop/: BaseRobTopActivity.kt  DefaultRobtopActivity.kt  JniToCpp.kt
app/src/main/java/com/geode/geodelauncher/: GeometryDashActivity.kt  LauncherFix.kt  MainActivity.kt  SettingsActivity.kt
app/src/main/java/com/geode/geodelauncher/utils/: Constants.kt  CountdownTimerWatcher.kt  GJConstants.kt  LaunchUtils.kt  PreferenceWatcher.kt
app/src/main/java/com/geode/launcher/: AltMainActivity.kt  ApplicationLogsActivity.kt  DeveloperServerService.kt  DownloadGeode.kt  GeometryDashActivity.kt  InstallReceiver.kt  LauncherFix.kt  LegacyMainActivity.kt  MainActivity.kt  Native.kt  SettingsActivity.kt  SettingsComponents.kt  UserDirectoryProvider.kt
app/src/main/java/com/geode/launcher/activityresult/: GeodeOpenFileActivityResult.kt  GeodeOpenFilesActivityResult.kt  GeodeSaveFileActivityResult.kt
app/src/main/java/com/robtopx/geometryjump/: GJConstants.kt  LaunchUtils.kt
app/src/main/java/dev/xyze/geodelauncher/: GeometryDashActivity.kt  LauncherFix.kt  MainActivity.kt
app/src/main/java/org/cocos2dx/lib/: Cocos2dxAccelerometer.kt  Cocos2dxActivity.kt  Cocos2dxBitmap.kt  Cocos2dxEditText.kt  Cocos2dxGLSurfaceView.kt  Cocos2dxHelper.kt  Cocos2dxRenderer.kt  Cocos2dxTextInputWrapper.kt  Cocos2dxTypefaces.kt
app/src/main/java/org/fmod/: AudioDevice.kt  FMOD.kt  MediaCodec.kt
app/src/main/res/drawable/: geode_base.xml  geode_base_light.xml  geode_logo.xml  geode_monochrome.xml  geode_monochrome_inner.xml  geode_monochrome_outer.xml  ic_launcher_geode_background.xml  ic_launcher_pride_background.xml  ic_launcher_sapphire_background.xml  ic_launcher_sapphire_foreground.xml  ic_launcher_sapphire_monochrome.xml  ic_launcher_trans_background.xml  ic_pride_background.xml  ic_trans_background.xml  icon_cloud_upload.xml  icon_download.xml  icon_mobile_code.xml  icon_resume.xml  icon_skull.xml  sapphire_base.xml  sapphire_base_light.xml  sapphire_monochrome.xml  sapphire_monochrome_inner.xml  sapphire_monochrome_outer.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_launcher_monochrome_shadow.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_geode.xml  ic_launcher_pride.xml  ic_launcher_sapphire.xml  ic_launcher_trans.xml  ic_pride.xml  ic_trans.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-v31/: themes.xml
app/src/main/res/xml/: game_mode_config.xml
gradle/wrapper/: gradle-wrapper.properties
(+64 files in other folders)
